--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -91,8 +91,8 @@ body {
 
 /* Nav */
 .menu {
-  height: 100dvh;
-  background-color: rgb(41, 41, 41);
+  height: 100vh;
+  background-color: #1c1d20;
   position: fixed;
   right: 0;
   top: 0;
@@ -160,18 +160,15 @@ body {
 
 /* Shape before footer */
 .circleContainer {
-  background-color: red;
   position: relative;
   margin-top: 100px;
 }
 
 .circleContainer .circle {
-  height: 1550%;
   width: 120%;
   left: -10%;
   border-radius: 0 0 50% 50%;
-  background-color: white;
-  z-index: 1;
+  z-index: 50;
   position: absolute;
   box-shadow: 0px 60px 50px rgba(0, 0, 0, 0.748);
 }
